--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 ---
-layout: home
+layout: front
 ---
-Hello
+
+<div id="floater"></div>
+
+<div id="front-media">
+    <strong><h1 class="front-text">TITLE</h1></strong>
+    <h3 class="front-text">sub-des</h3>
+    <p class="align-middle">
+        <a class="btn" href="{{ site.baseurl }}/info/" role="button">INFO</a>
+    </p>
+</div>
