page changes for initial layout

--- a/about.html
+++ b/about.html
@@ -1,23 +1,27 @@
 ---
 title: About us
-layout: pagecontent
+layout: front
 permalink: /about/
 ---
 
-<div class="main-content">
-    <div class="">
-        <h2><span>About Our Organization</span></h2>
-        <hr>
+<div class="container-fluid target">
+    <div class="row">
+            <div class="col-md-3 offset-md-2 content">
+                    <h3 class="text-center">
+                        ABOUT US
+                    </h3>
+                    <br>
+                    <p>The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the </p>
+                </div>
+                <div class="col-md-5 offset-md-2 content">
+                    <div class="column">
+                        <div class="row">
+                            <div class="redder"></div>
+                            <div class="thing">
+                                hihihi
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </div>
-    <p>
-    </p>
-    <div class="">
-        <h2><span></span></h2>
-        <hr>
-    </div>
-    <p>
-    </p>
-    <p>
-    </p>
-
 </div>
