--- a/index.html
+++ b/index.html
@@ -2,12 +2,4 @@
 layout: front
 ---
 
-<div id="floater"></div>
-
-<div id="front-media">
-    <strong><h1 class="front-text">TITLE</h1></strong>
-    <h3 class="front-text">sub-des</h3>
-    <p class="align-middle">
-        <a class="btn" href="{{ site.baseurl }}/info/" role="button">INFO</a>
-    </p>
-</div>
+<div class="container-fluid col-xs-12 target"></div>
