--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ permalink: /about/
                         <div class="row">
                             <div class="redder"></div>
                             <div class="thing">
-                                hihiu
+                                hihi
                             </div>
                         </div>
                     </div>
