--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ permalink: /about/
 <div class="container-fluid target">
     <div class="row">
             <div class="col-md-3 offset-md-2 content">
-                    <h3 class="text-center">
+                    <h3 class="text-center" style="font-family:verdana;">
                         ABOUT US
                     </h3>
                     <br>
@@ -19,6 +19,7 @@ permalink: /about/
                             <div class="redder"></div>
                             <div class="thing">
                                 hihi
+                                 
                             </div>
                         </div>
                     </div>
