--- a/about.html
+++ b/about.html
@@ -7,11 +7,20 @@ permalink: /about/
 <div class="container-fluid target">
     <div class="row">
             <div class="col-md-3 offset-md-2 content">
-                    <h3 class="text-center" style="font-family:verdana;">
+                    <h3 class="text-center" style="font-family:Geneva;">
                         ABOUT US
                     </h3>
                     <br>
-                    <p>The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the </p>
+                    <svg height="210" width="500">
+                            <line x1="50" y1="50" x2="200" y2="200" style="stroke:rgb(255,255,255);stroke-width:1" />
+                          </svg>
+                    <br>
+                    <br>
+                    <br>
+                    <p>The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting 
+                       club at the University of Pennsylvania. We provide students with the opportunities, resources, 
+                       and community to thrive both socially and professionally.
+                    </p>
                 </div>
                 <div class="col-md-5 offset-md-2 content">
                     <div class="column">
