--- a/about.html
+++ b/about.html
@@ -11,9 +11,13 @@ permalink: /about/
                         ABOUT US
                     </h3>
                     <br>
+                    <svg height="210" width="500">
+                            <line x1="50" y1="50" x2="200" y2="50" style="stroke:rgb(255,255,255);stroke-width:1" />
+                          </svg>
                     <br>
                     <br>
-                    <p>The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting 
+                    <br>
+                    <p style="stroke:rgb(255,255,255);">The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting 
                        club at the University of Pennsylvania. We provide students with the opportunities, resources, 
                        and community to thrive both socially and professionally.
                     </p>
