--- a/about.html
+++ b/about.html
@@ -33,5 +33,27 @@ permalink: /about/
                         </div>
                     </div>
                 </div>
+                <div class="col-md-5 offset-md-3 content">
+                        <div class="column">
+                            <div class="row">
+                                <div class="redder"></div>
+                                <div class="thing">
+                                    hihi
+                                     
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <div class="col-md-5 offset-md-4 content">
+                    <div class="column">
+                        <div class="row">
+                            <div class="redder"></div>
+                            <div class="thing">
+                                hihi
+                                 
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </div>
 </div>
