--- a/about.html
+++ b/about.html
@@ -12,10 +12,9 @@ permalink: /about/
                     </h3>
                     
                     <svg height="210" width="500">
-                            <line x1="150" y1="15" x2="250" y2="15" style="stroke:rgb(255,255,255);stroke-width:1" />
+                            <line x1="120" y1="15" x2="220" y2="15" style="stroke:rgb(255,255,255);stroke-width:1" />
                           </svg>                  
-                    <br>
-                    <p style="stroke:rgb(255,255,255);">The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting 
+                    <p font color="red">The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting 
                        club at the University of Pennsylvania. We provide students with the opportunities, resources, 
                        and community to thrive both socially and professionally.
                     </p>
