--- a/about.html
+++ b/about.html
@@ -24,8 +24,13 @@ permalink: /about/
                         <div class="row">
                             <div class="redder"></div>
                             <div class="thing">
-                                hihi
+                                Skill & Career Development
                             </div>
+                            <div class="thing">
+                                    Through workshops, tutorials, and opportunities to consult for local businesses, 
+                                    WUCC provides members with foundational skillsets for recruitment and consulting 
+                                    careers.
+                                </div>
                         </div>
                     </div>
                 </div>
