--- a/about.html
+++ b/about.html
@@ -9,12 +9,11 @@ permalink: /about/
             <div class="col-md-3 offset-md-2 content">
                     <h3 class="text-center" style="font-family:Geneva;">
                         ABOUT US
-                    </h3>
-                    
+                    </h3>               
                     <svg height="210" width="500">
                             <line x1="120" y1="15" x2="220" y2="15" style="stroke:rgb(255,255,255);stroke-width:1" />
                           </svg>                  
-                    <p font color="red">The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting 
+                    <p style="color:rgb(255, 255, 255);">The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting 
                        club at the University of Pennsylvania. We provide students with the opportunities, resources, 
                        and community to thrive both socially and professionally.
                     </p>
@@ -23,7 +22,7 @@ permalink: /about/
                     <div class="column">
                         <div class="row">
                             <div class="redder"></div>
-                            <div class="thing">
+                            <div class="thing" style="color:rgb(245, 125, 125);">
                                 Skill & Career Development
                                 <br/>
                                 Through workshops, tutorials, and opportunities to consult for local businesses, 
