--- a/about.html
+++ b/about.html
@@ -22,12 +22,17 @@ permalink: /about/
                     <div class="column">
                         <div class="row">
                             <div class="redder"></div>
-                            <div class="thing" style="color:rgb(245, 125, 125);">
+                            <div class="thing" style="color:rgb(248, 120, 120);">
                                 Skill & Career Development
-                                <br/>
-                                Through workshops, tutorials, and opportunities to consult for local businesses, 
-                                    WUCC provides members with foundational skillsets for recruitment and consulting 
-                                    careers.
+                            </div>
+                            <div class="thing" style="color:rgb(248, 120, 120);">
+                                    Skill & Career Development
+                                </div>
+                                <div class="thing" style="color:rgb(255, 255, 255);">  
+                                    Through workshops, tutorials, and opportunities to consult for local businesses, 
+                                        WUCC provides members with foundational skillsets for recruitment and consulting 
+                                        careers.
+                                    </div>
                             </div>
                         </div>
                     </div>
