--- a/about.html
+++ b/about.html
@@ -6,11 +6,11 @@ permalink: /about/
 
 <div class="container-fluid target">
     <div class="row">
+            <body background = "https://s3-torquehhvm-wpengine.netdna-ssl.com/uploads/2017/03/corporate-building.jpg">             
             <div class="col-md-3 offset-md-2 content">
                     <h3 class="text-center" style="font-family:Geneva;">
                         ABOUT US
                     </h3>  
-                    <img src = "https://s3-torquehhvm-wpengine.netdna-ssl.com/uploads/2017/03/corporate-building.jpg">             
                     <svg height="210" width="500">
                             <line x1="120" y1="15" x2="220" y2="15" style="stroke:rgb(255,255,255);stroke-width:1" />
                           </svg>                  
@@ -38,5 +38,6 @@ permalink: /about/
                         </div>
                     </div>
                 </div>
+                <\body>
     </div>
 </div>
