--- a/about.html
+++ b/about.html
@@ -29,6 +29,11 @@ permalink: /about/
                                 WUCC provides members with foundational skillsets for recruitment and consulting 
                                 careers.
                                 </div>
+                                <div class="thing" style="color:rgb(255, 255, 255);">  
+                                    Through workshops, tutorials, and opportunities to consult for local businesses, 
+                                        WUCC provides members with foundational skillsets for recruitment and consulting 
+                                        careers.
+                                    </div>
                             </div>
                         </div>
                     </div>
