--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@ permalink: /about/
 
 <div class="container-fluid target">
     <div class="row">
+        body: {
+            background-image: url("https://s3-torquehhvm-wpengine.netdna-ssl.com/uploads/2017/03/corporate-building.jpg");
+        }
+            
+  
             <div class="col-md-3 offset-md-2 content">
                     <h3 class="text-center" style="font-family:Geneva;">
                         ABOUT US
