--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ permalink: /about/
 <div class="container-fluid target">
     <div class="row">
         body: {
-            background-image: url("https://s3-torquehhvm-wpengine.netdna-ssl.com/uploads/2017/03/corporate-building.jpg");
+            background-image: url("building.jpg");
         }
             
   
