--- a/about.html
+++ b/about.html
@@ -6,22 +6,79 @@ permalink: /about/
 
 <div class="container-fluid target">
     <div class="row">
-            <div class="col-md-3 offset-md-2 content">
-                    <h3 class="text-center">
-                        ABOUT US
-                    </h3>
-                    <br>
-                    <p>The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the </p>
-                </div>
-                <div class="col-md-5 offset-md-2 content">
-                    <div class="column">
+        <div class="col-md-3 offset-md-2 content">
+                <h3 class="text-center intro">
+                    ABOUT US
+                </h3>
+                <br>
+                <p>The <strong>Wharton Undergraduate Consulting Club (WUCC)</strong> is the premier consulting club 
+                    at the University of Pennsylvania. We provide students with the opportunities, resources, and community to thrive
+                both socially and professionally.</p>
+        </div>
+        <div class="col-md-5 offset-md-2 content">
+            <div class="column">
+                <div class="row subcontent">
+                    <div class="redder col-md-2"></div>
+                    <div class="column col-md">
                         <div class="row">
-                            <div class="redder"></div>
-                            <div class="thing">
-                                hihihi
+                            <div class="subheader">
+                                <strong>Skill & Career Development</strong>
                             </div>
+                        </div>
+                        <div class="">
+                            <p>Through workshops, tutorials, and opportunities to consult for local businesses,
+                                WUCC provides members with foundational skillsets for recruitment and consulting careers.
+                            </p>
                         </div>
                     </div>
                 </div>
+                <div class="row subcontent">
+                    <div class="redder col-md-2"></div>
+                    <div class="column col-md">
+                        <div class="row">
+                            <div class="subheader">
+                                <strong>Social Network</strong>
+                            </div>
+                        </div>
+                        <div class="">
+                            <p>WUCC aims to provide a community for students with a shared interest in consulting.
+                                WUCC facilitates networking amongst members and acts as a primary contact
+                                between consulting firms and members.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="redder col-md-2"></div>
+                    <div class="column col-md">
+                        <div class="row subcontent">
+                            <div class="subheader">
+                                <strong>Industry Education</strong>
+                            </div>
+                        </div>
+                        <div class="">
+                            <p>WUCC provides a point of access for students who are unfamiliar with consulting. The club's
+                                panels, speaker events, and conference provide members with exposure and information to the consulting industry.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid structure">
+    <div class="row">
+        <div class="col-md-3 offset-md-2 boxed">
+            <h2 class="text-center intro-grey">
+                Structure
+            </h2>
+        </div>
+        <div class="col-xl-4 offset-md-2 content-grey">
+            WUCC's structure comprises of ten executive board members, 90 committee members, and over 2000+ general body members. 
+            We have committees for Conference, Events, Marketing, Internal Development, Strategic Development, and Advisors.
+            Advisors is the consulting branch of WUCC, providing pro-bono consulting services for local and national clients.
+            Members work in teams and receive the opportunity to travel onsite to present their recommendations.
+        </div>
     </div>
 </div>
