--- a/index.html
+++ b/index.html
@@ -2,4 +2,28 @@
 layout: front
 ---
 
-<div class="container-fluid col-xs-12 target"></div>
+<div class="container-fluid col-xs-12 target">
+    <div class="row">
+        <div class="col-md-3 offset-md-2">
+            <h1>
+                This is a simple slogan
+            </h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3 offset-md-2 whiteout">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 offset-md-2 secondary">
+            <h3>
+                Secondary Slogan
+            </h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-10 offset-md-2 pictures">
+            Pictures
+        </div>
+    </div>
+</div>
