--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 title: About us
-layout: front
+layout: default
 permalink: /about/
 ---
 
@@ -25,7 +25,7 @@ permalink: /about/
                                 <strong>Skill & Career Development</strong>
                             </div>
                         </div>
-                        <div class="">
+                        <div class="descrip">
                             <p>Through workshops, tutorials, and opportunities to consult for local businesses,
                                 WUCC provides members with foundational skillsets for recruitment and consulting careers.
                             </p>
@@ -40,7 +40,7 @@ permalink: /about/
                                 <strong>Social Network</strong>
                             </div>
                         </div>
-                        <div class="">
+                        <div class="descrip">
                             <p>WUCC aims to provide a community for students with a shared interest in consulting.
                                 WUCC facilitates networking amongst members and acts as a primary contact
                                 between consulting firms and members.
@@ -56,7 +56,7 @@ permalink: /about/
                                 <strong>Industry Education</strong>
                             </div>
                         </div>
-                        <div class="">
+                        <div class="descrip">
                             <p>WUCC provides a point of access for students who are unfamiliar with consulting. The club's
                                 panels, speaker events, and conference provide members with exposure and information to the consulting industry.
                             </p>
