--- a/join.html
+++ b/join.html
@@ -3,7 +3,7 @@ title: Join Us
 layout: default
 permalink: /join/
 ---
-<div class="container-fluid">
+<div class="container-fluid target_body">
     <div class="row">
         <div class="col-md-4 offset-md-2">
             <p>
