--- a/sponsorship.html
+++ b/sponsorship.html
@@ -3,3 +3,18 @@ title: Sponsorship
 layout: default
 permalink: /Sponsorship/
 ---
+
+<div class="container">
+    <div class="offset-md-2 col-md-8">
+
+        <h6><strong>Throughout the year, WUCC coordinates with corporate sponsors to organize coffee chats, private dinners, career treks, office visits, case interview and resume workshops, and career fairs. These exclusive opportunities allow our members to meet with and learn more about your company.</strong></h6>
+
+​
+
+<h6><strong>In addition to these company specific opportunities to engage with our members, WUCC also hosts over 30 events throughout the year. Past events include panel discussions with current consultants, casing interview prep, and resume workshops. If you are interested in being involved with these events, WUCC is happy to work with your specific goals.</strong></h6>
+
+​
+
+<h6><strong>We recognize effective sponsorship will be highly specific. Whether you are looking to compile a resume book from our members or start a case competition on campus under your company name, WUCC is happy to work with you and develop and implement your vision. Contact wuccboard@gmail.com to get started today.</strong></h6>
+    </div>
+</div>
